# PotosServer_ParamService

./: .gitignore  .gitmodules  CMakeLists.txt  ParamService.cpp  ParamService.h  add.txt  main.cpp  main.h  main_window.cpp  main_window.h  paramService-tasks.txt  saved_params.json
DB_Driver/: PSQL_Driver.cpp  PSQL_Driver.h
Monitor/: connection_dialog.cpp  connection_dialog.h  protos_message.cpp  protos_message.h  socket_adapter.cpp
Param_Item/: ParamItem.cpp  ParamItem.h
Resource/: icon.cdr  resource.aps
Settings/: DBConfigWidget.cpp  DBConfigWidget.h  ServerConnectWidget.cpp  ServerConnectWidget.h  Settings_dlg.cpp  Settings_dlg.h
TableModel/: ParamService_model.cpp  ParamService_model.h
appLogs/: 2023.07.11_15.02.57.txt
qss/: logWidget.css  main.css  toolbar.css
view_ParamTabs/: AddParamDlg.cpp  AddParamDlg.h  ConfigParamDlg.cpp  ConfigParamDlg.h  SetParamValueDlg.cpp  SetParamValueDlg.h  SetParamsTab.cpp  SetParamsTab.h  UpdateParamsTab.cpp  UpdateParamsTab.h
view_Settings/: DBConfigWidget.cpp  DBConfigWidget.h  ISettingsWidget.h  ParamServiceSettingsWidget.cpp  ParamServiceSettingsWidget.h  ServerConnectWidget.cpp  ServerConnectWidget.h  Settings_dlg.cpp  Settings_dlg.h
view_TableModel/: IParamService_model.cpp  IParamService_model.h  SetParamService_model.cpp  SetParamService_model.h  UpdateParamService_model.cpp  UpdateParamService_model.h
